[project]
name = "djlib"
version = "0.0.1"
description = "DJ library management"
readme = "README.md"
authors = [
    { name = "Christian Vanderwall", email = "christian@cvdub.net" }
]
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.1",
    "httpx[http2]>=0.28.1",
    "librespot",
    "mutagen>=1.47.0",
    "platformdirs>=4.3.6",
    "pydub>=0.25.1",
    "pyrekordbox",
    "tortoise-orm>=0.24.2",
]

[project.scripts]
djlib = "djlib:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "gnureadline>=8.2.13",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.uv.sources]
pyrekordbox = { git = "https://github.com/cvdub/pyrekordbox", rev = "a3aeb156c08c1cee457883dfa54e4f1ba19f9039" }
librespot = { git = "https://github.com/cvdub/librespot-python", rev = "a5db002" }
